2008-06-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8660: htmlArea RTE configuration option formatblock.restrictToItems does not work

2008-06-25  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8824: Missing label warning.install_enabled (thanks to Francois Suter)

2008-06-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #8799: Move htmlArea RTE undo/redo handling to own extension

2008-06-22  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8724: getElementsByClassName does not work properly in Firefox 3 and Safari 3.1 (thanks to Helmut Hummel)

2008-06-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #8790: htmlArea RTE image selection should honour hooking browsers
	* Added feature #8791: Let htmlArea RTE context menu use the RTE API
	* Fixed bug #8717 (cleanup): htmlArea RTE link browser does not honour correctly hooking browsers

2008-06-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8717 (revisited): htmlArea RTE link browser does not honour correctly hooking browsers

2008-06-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8716: htmlArea RTE: target configured on link class not honoured
	* Fixed bug #8716 (continued for dam): htmlArea RTE: target configured on link class not honoured
	* Fixed bug #8717: htmlArea RTE link browser does not honour correctly hooking browsers

2008-06-13  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8239: Wrong parameter order for strpos in t3lib_div::getHostname

2008-06-11  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #8571: Moving backend search to the right

2008-06-11  Michael Stucki  <michael@typo3.org>

	* (security) Fixed a low-severity Cross Site Scripting issue in fe_adminLib.inc. For details, see http://typo3.org/teams/security/security-bulletins/typo3-20080611-1/ - thanks to Christian Seifert, Jeroen van Iddekinge and Arnd Messer for discovering and reporting this issue.

2008-06-11  Ingmar Schlecht  <ingmar@typo3.org>
